# serde-saphyr

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  miri.sh  review.md  test_indent_array.rs
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: api-compat.yml  ci.yml  ci_.yml  codeql.yml  miri.yml  release.yml  rust.yml  rust_github.yml
examples/: benchmark.rs  commented.rs  figment_yaml.rs  garde_validate.rs  garde_validate_context.rs  graph_swiss_trains.rs  ignore_binary_tag_for_str.rs  include_error.rs  include_filesystem.rs  include_with_merge.rs  legacy_misplaced_bracket.rs  miette.rs  pirate_formatter.rs  polymorphism_tree_planing_robot.rs  polymorphism_tree_planting_robot.rs  polymorphism_tree_planting_robot_tuples.rs  print_transform.rs  recursive_yaml.rs  render_with_snipped.rs  render_with_snippet.rs  serde_ignored.rs  serde_path_to_error.rs  spaced_yaml.rs  spanned.rs  streaming_reader.rs  transcoding.rs  validator_validate.rs  value.yaml  wrapper_function.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: aliases_merges.rs  duplicate_keys.rs  flow_collections.rs  large_scalars.rs  raw_deserialize.rs  serialize.rs
src/: anchor_store.rs  anchors.rs  angles_conversions.rs  base64.rs  bs4k.rs  budget.rs  buffered_input.rs  cli.rs  de.rs  de_error.rs  error.rs  error_format.rs  figment.rs  include.rs  include_stack.rs  indentation.rs  input_source.rs  lib.rs  live_events.rs  localizer.rs  location.rs  long_strings.rs  macros.rs  main.rs  message_formatters.rs  miette.rs  options.rs  parse_scalars.rs  path_map.rs  properties.rs  properties_redaction.rs  robotics.rs  root_vec_serialization.rs  safe_resolver.rs  ser.rs  ser_error.rs  ser_quoting.rs  serializer_options.rs  sf_serde.rs  slicer.rs  (+6 more)
src/de/: anchor_store.rs  api.rs  base64.rs  budget.rs  buffered_input.rs  cfg.rs  commented_deser.rs  deserializer.rs  error.rs  events.rs  figment.rs  figment2.rs  include.rs  include_stack.rs  indentation.rs  input_source.rs  key_nodes.rs  lib_validate.rs  live_events.rs  localizer.rs  location.rs  message_formatters.rs  miette.rs  mod.rs  options.rs  parse_scalars.rs  path_map.rs  properties.rs  properties_redaction.rs  ring_reader.rs  robotics.rs  safe_resolver.rs  snippet.rs  span.rs  spanned_deser.rs  tags.rs  tests.rs  with_deserializer.rs
src/ser/: api.rs  compound.rs  error.rs  helpers.rs  mod.rs  options.rs  quoting.rs  serializer.rs  wrapper_impls.rs  wrapping.rs  zmij_format.rs
src/ser/serializer/: compound.rs  helpers.rs
tests/: anchor_wrapper_apis.rs  anchors.rs  anchors_coverage.rs  anon_enums.rs  attacks.rs  basic_tests.rs  binary.rs  block_scalar_indentation.rs  block_string_wrappers.rs  boolean_literals.rs  borrow.rs  borrowed_str_validation.rs  borrowing_deserialization.rs  borrowing_improvement.rs  compact_list_indent.rs  compile_indent_step.rs  compile_macro_feature_gates.rs  compile_quoted.rs  coverage_boost_low_hanging.rs  coverage_low_areas.rs  coverage_public_helpers.rs  coverage_serializer_edges.rs  custom_messages.rs  dash_quoting.rs  de_basic_values.rs  de_coverage.rs  de_deserializer_reachable_edges.rs  de_entrypoints.rs  deserialize_weak_anchors.rs  deserialize_with.rs  empty_map_braces.rs  empty_struct.rs  empty_vector.rs  en_structs.rs  enum_to_json_value.rs  enum_with_tags_2.rs  enums.rs  external_message_override.rs  extra_bracket.rs  fake_sockets.rs  (+341 more)
tests/garde/: garde_errors_2.rs  garde_robotics.rs  garde_validation_errors.rs  mod.rs
tests/grafana/: README.md  critical_line_folding.rs  dash_quoting.rs  mod.rs  quoted_multiline_wrap.rs  test_ambiguous_keys.rs  test_block_scalar_chomp.rs  test_line_width.rs
tests/serde_yaml/: mod.rs  test_anchor_only.rs  test_binary.rs  test_block_scalars.rs  test_bytes.rs  test_composite_keys.rs  test_custom_date_format.rs  test_de.rs  test_end_marker.rs  test_enum_alias_nested.rs  test_enum_external.rs  test_enum_repetition_limit.rs  test_error.rs  test_error_format.rs  test_flow_map.rs  test_flow_seq.rs  test_from_str_value.rs  test_fuzz_crashes.rs  test_historical_failures.rs  test_io_helpers.rs  test_json.rs  test_limit_deserializer_options.rs  test_limit_recursion.rs  test_limit_repetition.rs  test_mapping_entry.rs  test_mapping_ops.rs  test_merge_keys_serde.rs  test_multi_helpers.rs  test_no_panic.rs  test_numeric_enums.rs  test_rc_arc_cow_etc.rs  test_readme_examples.rs  test_recursion_limit.rs  test_repro_fuzz_targets.rs  test_serde.rs  test_stream_deserializer.rs  test_string_quoting.rs  test_tag.rs  test_tag_display.rs  test_value.rs  (+6 more)
tests/test_suite/: mod.rs  y_229Q.rs  y_236B.rs  y_2EBW.rs  y_2JQS.rs  y_3ALJ.rs  y_3GZX.rs  y_3R3P.rs  y_3RLN.rs  y_4CQQ.rs  y_4EJS.rs  y_4H7K.rs  y_4MUZ.rs  y_4Q9F.rs  y_4QFQ.rs  y_4RWC.rs  y_4V8U.rs  y_5BVJ.rs  y_5C5M.rs  y_5GBF.rs  y_5LLU.rs  y_5MUD.rs  y_5NYZ.rs  y_5T43.rs  y_5TRB.rs  y_5TYM.rs  y_652Z.rs  y_6BCT.rs  y_6H3V.rs  y_6JQW.rs  y_6JWB.rs  y_6LVF.rs  y_6M2F.rs  y_6S55.rs  y_6SLA.rs  y_6VJK.rs  y_6WPF.rs  y_735Y.rs  y_753E.rs  y_7A4E.rs  (+97 more)
tests/ui/: indent_step_huge.rs  indent_step_huge.stderr  indent_step_ok.rs  indent_step_too_large.rs  indent_step_too_large.stderr  indent_step_zero.rs  indent_step_zero.stderr  quoted_non_string.rs  quoted_non_string.stderr  quoted_string_ok.rs  require_indent_divisible_zero.rs  require_indent_divisible_zero.stderr
tests/validator/: mod.rs  validator_validation_errors.rs
