[package]
name = "serde-saphyr"
version = "0.0.20"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "YAML (de)serializer for Serde, emphasizing panic-free parsing and good error reporting"
documentation = "https://docs.rs/serde-saphyr/latest/serde-saphyr/"
repository = "https://github.com/bourumir-wyngs/serde-saphyr"
readme = "README.md"
categories = ["encoding", "parser-implementations", "config", "command-line-utilities"]
keywords = ["yaml", "serde", "config", "ros", "wasm"]
exclude = ["Cargo.lock"]

[dependencies]
saphyr-parser = { package = "saphyr-parser-bw", version = "0.0.608"}
# saphyr-parser = { package="saphyr-parser-bw", git = "https://github.com/bourumir-wyngs/saphyr", branch = "dev/saphyr-parser" }
serde = { version = "1", features = ["derive"] }
smallvec = {  version = ">= 1.0.0, < 1.16.0" }
num-traits = { version = ">=0.2.0, <=0.2.19" }
base64 = { version = ">=0.21.0, <=0.22.1" }
zmij = "1.0"
regex = { version = ">= 1.0, < 1.13"} # range tested
nohash-hasher = "0.2"
encoding_rs_io = "0.1"
ahash = "0.8"
annotate-snippets = "0.12"
figment = { version = "0.10", optional = true }
garde = { version = ">= 0.19.0, < 0.23", optional = true, features = ["derive"] }
miette = { version = "7", optional = true, features = ["fancy"] }
validator = { version = ">= 0.11, < 0.21", optional = true, features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Some dependency stacks pull in `getrandom` (often via `ahash`). For `wasm32-unknown-unknown`,
# `getrandom` needs the JS backend enabled. Adding it here ensures feature unification even when
# `getrandom` is only a transitive dependency. ahash currently needs getrandom 0.3.
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = []

# Enables integration with the `garde` validation crate.
garde = ["dep:garde"]

# Enables integration with the `validator` validation crate.
validator = ["dep:validator"]

# Enables structured diagnostics via the `miette` crate.
miette = ["dep:miette"]

# Enables integration with the `figment` configuration crate.
figment = ["dep:figment"]

# Adds YAML conventions common in robotics: conversion functions (deg, rad) and simple mathematical expressions such
# as deg(180), rad(pi), 1 + 2*(3 - 4/5), or rad(pi/2). angle_conversions must be set to true in the Options.
robotics = []

# Enables byte-span reporting for YAML documents > 4 GiB by using `u64` instead of `u32`.
# Parsing and normal error reporting work without this feature, but byte offsets are not reported. Public API
# does not change.
huge_documents = []

[dev-dependencies]
indoc = { version = ">= 2.0.6, < 2.1"}
serde_bytes = "0.11"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_repr = "0.1.20"
anyhow = "1.0"
chrono = "0.4"
trybuild = "1.0"

serde-transcode = "1.1.1" # we only use in tests
serde_ignored = "0.1"
serde_path_to_error = "0.1"
serde_json = { version = "1", features = ["preserve_order"] }
miette = { version = "7", features = ["fancy"] }

[package.metadata]
status = "actively developed"

[[example]]
name = "garde_validate"
required-features = ["garde"]

[[example]]
name = "garde_validate_context"
required-features = ["garde"]

[[example]]
name = "miette"
required-features = ["miette", "garde", "validator"]

[[example]]
name = "validator_validate"
required-features = ["validator"]

[[example]]
name = "figment_yaml"
required-features = ["figment"]

[lints.rust]
unsafe_code = "forbid"
